# SDS-CP044-finresearch

./: .gitignore  main.py  requirements.txt
advanced/submissions/team-members/art-turner/agents/: analyst_agent.py  manager_agent.py  (+1 more)
advanced/submissions/team-members/mohamed-zakarneh/Code/: app.py  backend.py  pyproject.toml  requirements.txt
advanced/submissions/team-members/prateek-mulye/: app.py
advanced/submissions/team-members/rajan-hans/: .gitignore  app_new.py  app_service_new.py  charts.py  config.py  inspect_db.py  requirements.txt  run_crew.py  tradingview_widgets.py
advanced/submissions/team-members/yan-cotta/: .gitignore  Dockerfile  README.md  pyproject.toml  run_dev.sh  verify_full_run.py
agents/: __init__.py  base.py  financial_analyst.py  financial_crew.py  manager.py  market_researcher.py
beginner/submissions/team-members/konstantinos/: .gitignore  app.py  data-analysis.ipynb  requirements.txt
config/: __init__.py  settings.py
src/SDS-CP044-FINRESEARCH/agents/: financial_analyst.py  manager.py  market_researcher.py
src/SDS-CP044-FINRESEARCH/agents/tools/: financial_tools.py
src/SDS-CP044-FINRESEARCH/ui/: app.py
src/SDS-CP044-FINRESEARCH/ui/components/: output.py
src/SDS-CP044-FINRESEARCH/ui/utils/: state_manager.py
src/agents/: financial_analyst.py  financial_crew.py  manager.py  market_researcher.py  reporter.py
src/agents/prompts/: financial_analyst.md
src/tools/: financial_tools.py  memory_store.py  memory_tools.py
src/ui/: app.py
src/ui/components/: export.py  output.py
src/ui/utils/: formatters.py  state_manager.py
(+49 files in other folders)
