[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.11.0",
    "chromadb>=1.3.5",
    "google-search-results>=2.4.2",
    "isort>=7.0.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "tavily>=1.1.0",
    "yfinance>=0.2.66",
]
